---------------------------------------------------------------------------------------------------
Version: 1.0.26
Date: 2023-11-26
  Bugfixes:
    - Fixed error where trains were counted as belonging to a group when they had no locomotive.
---------------------------------------------------------------------------------------------------
Version: 1.0.25
Date: 2023-11-25
  Bugfixes:
    - Fixed typo preventing icon selectors from inputting virtual signals.
---------------------------------------------------------------------------------------------------
Version: 1.0.24
Date: 2023-11-25
  Features:
    - Added ability to consider trains whose only differences in schedule are excluded to be part
      of the same train group.
    - Added automatic exclusion of temporary stops.
    - Improved display of schedules, with more granular colors indicating excluded train stops.
  Modding:
    - Compatibility with Train Control Signals.
    - Compatibility with Fuel Train Stop.
  Bugfixes:
    - Fixed incorrect display of schedules with invalid stops (temporary stops terminating at rails
      which had been removed).
    - Fixed excluded/hidden keywords not applying if they were added to the keyword list before 
      version 1.0.20.
---------------------------------------------------------------------------------------------------
Version: 1.0.23
Date: 2023-11-25
  Modding:
    - Added compatibility with the TrainGroups mod (by raiguard).
      When generating a blueprint for a train, the new train will share a train group with the
      template train. This behavior can be toggled. This behavior is not guaranteed to work if not
      all trains with a particular schedule are part of the same train group by TrainGroups's
      definition.
---------------------------------------------------------------------------------------------------
Version: 1.0.22
Date: 2023-11-22
  Bugfixes:
    - Fixed crash when opening settings tab with 248k mod installed.