@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.26
-Date: 2023-11-26
+Date: 2023-11-27
   Bugfixes:
     - Fixed error where trains were counted as belonging to a group when they had no locomotive.
+    - Fixed crash when a schedule had too many stops.
+    - Fixed crash when too schedules were sorted into a group by exclusion.
+    - Fixed double counting of train stop limits if a train visits the same stop more than once.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.25
 Date: 2023-11-25
